--- a/DatasetStorageNotificationModule.Infrastructure/DatasetStorageNotificationModule.Infrastructure.csproj
+++ b/DatasetStorageNotificationModule.Infrastructure/DatasetStorageNotificationModule.Infrastructure.csproj
@@ -7,10 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Common" Version="0.0.7"/>
-        <PackageReference Include="Dapper" Version="2.1.35"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0"/>
+        <PackageReference Include="Dapper" Version="2.1.66"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
         <PackageReference Include="Riok.Mapperly" Version="3.6.0"/>
     </ItemGroup>
 
